--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,10 @@ env:
 phases:
   pre_build:
     commands:
+      - echo "Performing manual install of compose cli"
+      - curl -L -o docker-linux-amd64.tar.gz https://github.com/docker/compose-cli/releases/download/v1.0.10/docker-linux-amd64.tar.gz
+      - tar xzf docker-linux-amd64.tar.gz
+      - chmod +x docker/docker    
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
