--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,11 @@ phases:
       - echo "Performing manual install of compose cli"
       - curl -L -o docker-linux-amd64.tar.gz https://github.com/docker/compose-cli/releases/download/v1.0.10/docker-linux-amd64.tar.gz
       - tar xzf docker-linux-amd64.tar.gz
-      - chmod +x docker/docker    
+      - chmod +x docker/docker
+      - ls -ltr
+      - docker/docker compose --help
+      - which docker
+      - ln -s $(which docker) /usr/local/bin/com.docker.cli    
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
