--- a/.github/workflows/frontend_pipeline.yml
+++ b/.github/workflows/frontend_pipeline.yml
@@ -6,6 +6,8 @@ on:
     paths: 
       - 'frontend/**' 
 
+  workflow_dispatch:
+
 
 jobs:
   frontend:
@@ -16,7 +18,7 @@ jobs:
       run:
         shell: bash
         working-directory: ./frontend
-        
+
     steps:
       - name: Trigger AWS CodePipeline
         uses: zulhfreelancer/aws-codepipeline-action@vX.X.X
