--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -17,8 +17,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...      
-      - docker build -f ./frontend/Dockerfile    
-      - docker build -t $IMAGE_REPO_NAME:latest
+      - docker build -f ./frontend/Dockerfile ./frontend -t $IMAGE_REPO_NAME:latest 
       - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
   post_build:
     commands:
