--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -19,7 +19,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn test 
+      - mvn -f ./backend test 
       - echo Building the Docker image...      
       - docker build -f ./backend/Dockerfile ./backend -t $IMAGE_REPO_NAME:latest 
       - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
@@ -27,7 +27,7 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
-      - mvn package
+      - mvn -f ./backend package 
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
