--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -16,6 +16,8 @@ phases:
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
+      - apt-get update
+      - apt-get install -y tree
   build:
     commands:
       - echo Build started on `date`
