Testing SSM instead of config.json

--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -6,7 +6,7 @@ env:
     IMAGE_REPO_NAME: "ea-deploy-fe"
     #IMAGE_TAG: $IMAGE_TAG
   
-  secrets-manager: 
+  parameter-store: 
     DB_CONFIG: "/eadesign/db_config"
 
 
