--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -4,10 +4,7 @@ env:
   variables: 
     AWS_ACCOUNT_ID: "019359575870"
     IMAGE_REPO_NAME: "ea-deploy-fe"
-  
-  parameter-store: 
-    DB_CONFIG: "/eadesign/db_config"
-
+    #IMAGE_TAG: $IMAGE_TAG
 
 phases:
   pre_build:
@@ -19,9 +16,8 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo $DB_CONFIG > ./frontend/config/config.json
-      - echo Building the Docker image...      
-      - docker build -f ./frontend/Dockerfile ./frontend -t $IMAGE_REPO_NAME:latest 
+      - echo Building the Docker image...          
+      - docker build -t $IMAGE_REPO_NAME:latest .
       - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
   post_build:
     commands:
