--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -20,8 +20,8 @@ phases:
 
   pre_build:
     commands: 
-      - apt-get update
-      - apt-get install -y jq
+      - yum update
+      - yum install -y jq
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
