--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -6,6 +6,9 @@ env:
     IMAGE_REPO_NAME: "ea-deploy-fe"
     #IMAGE_TAG: $IMAGE_TAG
 
+  parameter-store: 
+    DB_CONFIG: "/eadesign/db_config"
+
 phases:
   pre_build:
     commands: 
@@ -16,8 +19,9 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Building the Docker image...          
-      - docker build -t $IMAGE_REPO_NAME:latest .
+      - echo $DB_CONFIG > ./frontend/config/config.json
+      - echo Building the Docker image...      
+      - docker build -f ./frontend/Dockerfile ./frontend -t $IMAGE_REPO_NAME:latest 
       - docker tag $IMAGE_REPO_NAME:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
   post_build:
     commands:
