--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -33,7 +33,7 @@ phases:
       - echo Build started on `date`
       - echo $DB_CONFIG > ./backend/src/main/resources/config.properties
       - mvn -f ./backend test 
-      - mvn sonar:sonar -Dsonar.login=$LOGIN -Dsonar.host.url=$HOST -Dsonar.projectKey=$Project -Dsonar.organization=$Organization
+      - cd backend && mvn sonar:sonar -Dsonar.login=$LOGIN -Dsonar.host.url=$HOST -Dsonar.projectKey=$Project -Dsonar.organization=$Organization
       - sleep 5
       - curl https://sonarcloud.io/api/qualitygates/project_status?projectKey=$Project >result.json
       - cat result.json
